--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "peerjs": "^1.3.1",
