--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "peerjs": "^1.3.1",
     "socket.io": "^2.4.0",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "xmlhttprequest-ssl": ">=1.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
